<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboardingFragments.FirstPage"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/leaferapplogo"
        android:text="@string/hello_blank_fragment" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textAlignment="center"
        android:text="@string/greeting"
        android:padding="5dp"
        android:textSize="40sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:fontFamily="@font/lato"
        android:textAlignment="center"
        android:text="@string/onboading_subheading"/>
</LinearLayout>