<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboardingFragments.FirstPage"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="15dp"
                    app:srcCompat="@drawable/scancam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:padding="5dp"
                    android:text="@string/onboarding_feature1"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/onboarding_feature2"
                    android:textAlignment="center"
                    android:textSize="25sp" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/trackplants" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="15dp"
                    app:srcCompat="@drawable/notesplants" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:padding="5dp"
                    android:text="@string/onboarding_feature3"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/syncplants" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:padding="5dp"
                    android:text="@string/onboarding_feature4"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>


        </LinearLayout>
</ScrollView>